<resources>
    <string name="app_name">汇呼吸</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_breath_train">BreathTrainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_start_train">StartTrainActivity</string>

    <string name="string_jinxing_train">开始训练</string>
    <string name="string_start_train">开始训练</string>
    <string name="String_stop_train">暂停</string>
    <string name="hui_tubiao">\@HyTriage</string>
    <string name="string_system_setting_top">系统设置</string>
    <string name="string_about_us_top">关于我们</string>
    <string name="string_modify_user_info">修改资料</string>
    <string name="string_user_info">个人资料</string>
    <string name="string_tab_train">训练</string>
    <string name="string_tab_report">报告</string>
    <string name="string_tab_his">历史</string>
    <string name="string_tab_check">检测</string>
    <string name="string_tab_me">我</string>


    <string name="string_login">登录</string>
    <string name="string_login_out">退出登录</string>
    <string name="string_login_error">登录名或密码不能为空</string>
    <string name="string_reset_pass_success">密码重置成功</string>
    <string name="string_pass_no_same">两次密码不一致</string>
    <string name="string_perfect_userinfo">完善资料</string>
    <string name="string_please_xiqi">请吸气</string>
    <string name="string_please_huqi">请呼气</string>
    <string name="string_please_pause">休息</string>
    <string name="string_register">注册</string>
    <string name="string_register_phone">请输入您的手机号</string>
    <string name="string_register_pass">请设置您的密码</string>
    <string name="string_confirm_pass">请再次输入密码</string>
    <string name="string_next">下一步</string>
    <string name="string_check_code">请输入验证码</string>
    <string name="string_get_check_code">获取验证码</string>
    <string name="string_commit">提交</string>
    <string name="string_health_start">开始测量</string>
    <string name="string_health_second">肺活力</string>
    <string name="string_health_speed">峰速值</string>
    <string name="string_health_composite">综合指数</string>
    <string name="string_user_commit">用户提交</string>
    <string name="string_user_commit_success">用户修改成功</string>
    <string name="string_user_commit_error">用户修改失败</string>
    <string name="string_user_login_error">登录失败,请检查账户和网络</string>
    <string name="string_phone_type_error">请输入正确的手机号</string>
    <string name="string_xiqi_info">对准呼吸器,缓缓吸气 \n</string>
    <string name="string_huqi_info">对准呼吸器,缓慢呼气</string>
    <string name="string_error_connection">呼吸器链接错误,请重新训练</string>
    <string name="string_look_introductions">等级说明</string>


    <string name="hui_triage_info">汇呼吸是北京汇创宜医疗科技有限公司专为COPD慢性呼吸疾病、哮喘患者打造的一款便携式智能呼吸功能训练设备，仅与智能手机连接便能随时随地的进行呼吸训练，还能与自己的医生远程互动参与一对一制定的训练课程。</string>
    <string name="hui_triage_function">公司致力于呼吸康复训练设备的研发、训练习惯养成，提供能够改善每个人呼吸品质的完整解决方案。汇呼吸将成为您私人呼吸训练专家，让呼吸更轻松，让每个人的呼吸系统不受呼吸困难的困扰。</string>
    <string name="string_train_exit">您是否要中断训练?</string>
    <string name="string_train_exit_no">否</string>
    <string name="string_train_exit_ok">是</string>
    <string name="string_error_net">网络连接异常</string>
    <string name="string_error_phone">手机格式不正确</string>
    <string name="string_error_phone_empty">手机号不能为空</string>
    <string name="string_password_no_same">密码不一致</string>
    <string name="string_password_no_empty">密码不能为空</string>
    <string name="string_permission_read_sdk">汇呼吸需要获取手机的存储读取权限，若禁止将影响汇呼吸使用</string>


    <string name="string_his_no_data">您还没有任何数据</string>
    <string name="string_serial_number">请将智能训练仪器插入USB口</string>
    <string name="string_serial_top">呼吸器序列号</string>
    <string name="string_health_no_connect">设备未连接</string>
    <string name="string_health_error_usb">设备连接异常</string>
    <string name="string_health_error_open">设备开启失败</string>
    <string name="string_health_error_init">设备初始化失败</string>
    <string name="string_health_error_serial">设备序列号获取异常</string>


    <string name="string_detail_user_error">获取个人信息失败</string>
    <string name="string_detail_user_net_error">网络连接异常</string>
    <string name="string_breath_health_check">呼吸健康检测</string>
    <string name="string_create_myself_train">创建自定义训练</string>
    <string name="string_create_train">创建</string>
    <string name="string_create_train_name">创建训练名称</string>
    <string name="string_train_inhale_tip">吸气时，最大限度地向\n外扩腹，胸部保持不动</string>
    <string name="string_train_breath_tip">呼气时，最大限度地向\n内收腹，胸部保持不动</string>

    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wed">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sat">周六</string>
    <string name="sun">周日</string>
    <string name="cycle_sure">确定</string>
    <string name="vibration">震动</string>
    <string name="ring">铃声</string>
    <string name="string_time_start_train">我知道了</string>

    <string name="rationale_ask_again">\"汇呼吸\"如果没有存储读取权限，部分功能将受限。\n请打开应用设置界面对应用权限修改。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="string_tips">提示</string>
    <string name="string_time_start_title">测量提醒</string>
</resources>
