<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/white"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hhd.breath.app.main.ui.BreathRegisterFirst">

    <include layout="@layout/common_login_top" android:id="@+id/layoutTop"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/layoutFirst"
        android:layout_below="@+id/layoutTop"
        android:layout_marginTop="@dimen/common_dian10"
        android:layout_height="@dimen/common_dian50">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dian44"
            android:background="@null"
            android:layout_marginLeft="@dimen/common_dian30"
            android:layout_marginRight="@dimen/common_dian30"
            android:hint="@string/string_register_phone"
            android:id="@+id/edtPhone"
            android:singleLine="true"
            android:inputType="number"
            android:textColorHint="@color/common_bottom_text_color"
            android:imeOptions="actionNext"
            android:textSize="@dimen/common_text_16sp"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/common_dian30"
            android:layout_marginRight="@dimen/common_dian30"
            android:background="@color/common_color_cbcbcb"
            android:layout_height="1dip">
        </View>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/layoutSecond"
        android:layout_below="@+id/layoutFirst"
        android:layout_marginTop="@dimen/common_dian10"
        android:layout_height="@dimen/common_dian50">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dian44"
            android:background="@null"
            android:layout_marginLeft="@dimen/common_dian30"
            android:layout_marginRight="@dimen/common_dian30"
            android:hint="@string/string_register_pass"
            android:textColorHint="@color/common_bottom_text_color"
            android:id="@+id/edtPassword"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textSize="@dimen/common_text_16sp"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/common_dian30"
            android:layout_marginRight="@dimen/common_dian30"
            android:background="@color/common_color_cbcbcb"
            android:layout_height="1dip">
        </View>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/layoutThrid"
        android:layout_marginTop="@dimen/common_dian10"
        android:layout_below="@+id/layoutSecond"
        android:layout_height="@dimen/common_dian50">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dian44"
            android:background="@null"
            android:layout_marginLeft="@dimen/common_dian30"
            android:layout_marginRight="@dimen/common_dian30"
            android:hint="@string/string_confirm_pass"
            android:imeOptions="actionDone"
            android:id="@+id/edtOkPassword"
            android:singleLine="true"
            android:textColorHint="@color/common_bottom_text_color"
            android:inputType="textPassword"
            android:textSize="@dimen/common_text_16sp"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/common_dian30"
            android:layout_marginRight="@dimen/common_dian30"
            android:background="@color/common_color_cbcbcb"
            android:layout_height="1dip">
        </View>
    </RelativeLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/common_dian30"
        android:layout_marginLeft="@dimen/common_dian30"
        android:layout_below="@+id/layoutThrid"
        android:layout_marginTop="@dimen/common_dian30"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnNext"
        android:textSize="@dimen/common_text_18sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/string_next"
        android:background="@drawable/btn_common_oval"
        android:layout_height="@dimen/common_dian44"/>

</RelativeLayout>
