<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.hhd.breath.app.main.ui.BreathHealthActivity">
    <include layout="@layout/common_login_top"
             android:id="@+id/layoutTop"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/layoutTop"
        android:scrollbars="none"
        android:scrollIndicators="none"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:background="@mipmap/img_health_bg"
                android:layout_height="383dip">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:id="@+id/layoutShow"
                    android:background="@color/transparent"
                    android:layout_height="@dimen/common_dian50">
                    <Button
                        android:layout_toLeftOf="@+id/layoutCenter"
                        android:layout_marginRight="@dimen/common_dian15"
                        android:layout_height="33dip"
                        android:layout_width="87dip"
                        android:id="@+id/btnWindSpeedValue"
                        android:text="@string/string_health_speed"
                        android:textIsSelectable="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/common_text_14sp"
                        android:background="@drawable/btn_health_ovl"
                        android:layout_centerInParent="true"/>



                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_centerInParent="true"
                        android:id="@+id/layoutCenter"
                        android:layout_height="33dip">
                        <Button
                            android:layout_width="87dip"
                            android:text="@string/string_health_second"
                            android:id="@+id/btnOneSecondValue"
                            android:textSize="@dimen/common_text_14sp"
                            android:textColor="@color/white"
                            android:background="@drawable/btn_health_ovl"
                            android:layout_centerInParent="true"
                            android:layout_height="match_parent"/>
                    </RelativeLayout>

                    <Button
                        android:layout_toRightOf="@+id/layoutCenter"
                        android:layout_marginLeft="@dimen/common_dian15"
                        android:layout_height="33dip"
                        android:layout_width="87dip"
                        android:text="@string/string_health_composite"
                        android:id="@+id/btnCompositeValue"
                        android:layout_centerVertical="true"
                        android:textSize="@dimen/common_text_14sp"
                        android:textColor="@color/white"
                        android:background="@drawable/btn_health_ovl"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>
                <lecho.lib.hellocharts.view.ComboLineColumnChartView
                    android:paddingTop="@dimen/common_dian10"
                    android:layout_below="@+id/layoutShow"
                    android:id="@+id/chart"
                    android:layout_marginRight="@dimen/common_dian5"
                    android:background="@color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/common_dian15"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_dian44"
                    android:layout_marginLeft="@dimen/common_dian30"
                    android:layout_marginRight="@dimen/common_dian30"
                    android:text="开始测量"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/common_dian30"
                    android:id="@+id/btnStartHealthTest"
                    android:textColor="@color/white"
                    android:textSize="@dimen/common_text_18sp"
                    android:background="@drawable/btn_common_oval"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginLeft="35dip"
                    android:layout_marginRight="35dip"
                    android:layout_below="@+id/btnStartHealthTest"
                    android:layout_marginTop="@dimen/common_dian20"
                    android:id="@+id/tvShowSuggestion"
                    android:textColor="@color/common_color_9A9A9A"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
